==> XS-dev/STI_STM32_Teaching/PPJ/STM2023Summer/2019D/DDS/AD9854模块+STM32&51驱动+原理图 V0.3/DDS开发板-STM32-点频9854(ok)/HARDWARE/AD9854/AD9854.c <==
#include <AD9854.h>      //STC单片机头文件
#include "delay.h"
#define      CLK_Set            4
#define      CLK_Set            5
#define      CLK_Set            6
#define      CLK_Set            7
#define      CLK_Set            8
#define      CLK_Set            9
#define      CLK_Set            10
#define      CLK_Set            11
#define      CLK_Set            12
#define      CLK_Set            13
#define      CLK_Set            14
#define      CLK_Set            15

void AD9854_IO_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure ; 

	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB|RCC_APB2Periph_GPIOA|RCC_APB2Periph_GPIOC, ENABLE);	 //使能PB,PE端口时钟

	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz ; 
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP ; 
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10; 
	GPIO_Init(GPIOB ,&GPIO_InitStructure) ; 

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6| GPIO_Pin_4| GPIO_Pin_5| GPIO_Pin_8| GPIO_Pin_2; 
	GPIO_Init(GPIOA ,&GPIO_InitStructure) ;

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_All^(GPIO_Pin_14| GPIO_Pin_15); 
	GPIO_Init(GPIOC ,&GPIO_InitStructure) ;
}

void AD9854_WR_Byte(u32 addr,u32 dat)
{
	uint32_t wData = 0;
	
	dat1= dat|(addr<<8);
	
	wData =(dat1&0x3fff)|((dat1^0x3fff)<<16);
	AD9854_AdrBus = wData;
	AD9854_WR      = 0;
	AD9854_WR      = 1;
}

void AD9854_Init(void)
{
	AD9854_IO_Init();
	AD9854_WR=1;//将读、写控制端口设为无效
	AD9854_RD=1;
	AD9854_UDCLK=0;
	AD9854_RST=1;                 //复位AD9854
	AD9854_RST=0;

	AD9854_WR_Byte(0x1d,0x00);					//打开比较器
	//	AD9854_WR_Byte(0x1d,0x10);	    //关闭比较器
	AD9854_WR_Byte(0x1e,CLK_Set);	   		//设置系统时钟倍频            
	AD9854_WR_Byte(0x1f,0x00);	   			//设置系统为模式0，由外部更新
	AD9854_WR_Byte(0x20,0x60);	   			//设置为可调节幅度，取消插值补偿

	AD9854_UDCLK=1;               			//更新AD9854输出
	AD9854_UDCLK=0;
}
